src/chrome/komodo/skin/plat/mac/_config/icons.less
@import url("chrome://komodo/skin/plat/shared/_config/icons.less");

/* Folder Icons */
@icon-folder-open:              url("chrome://global/skin/dirListing/folder.png");
@icon-folder-closed:            url("chrome://global/skin/dirListing/folder.png");
@icon-folder-remote:            url("chrome://famfamfamsilk/skin/icons/folder_link.png");
@icon-project:                  url('chrome://komodo/skin/images/project_icon.png');
@icon-native-folder:            url("chrome://global/skin/dirListing/folder.png");
@icon-new-project:              @icon-project;

/* Tab Icons */
@icon-tab-close-button:         none;

/* Global icons */
@icon-warning:                  url("chrome://global/skin/icons/warning-large.png");
@icon-question:                 url("chrome://global/skin/icons/alert-question.gif");

